# pixeld-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
src/: assets.hpp  main.cpp
test/: app_test.cpp
